--- a/assets/style.css
+++ b/assets/style.css
@@ -330,7 +330,7 @@ li::marker{
 /* Sezione partner */
 
 .partner{
-    margin: 50px 0px;
+    margin: 85px 0px;
 
 }
 
@@ -349,16 +349,60 @@ li::marker{
     max-width: 100%;
     width: 60%;
     float: left;
+    margin-right: 30px;
 }
 
 .blocco_testo{
-    padding-left: 350px;
     padding-right: 30px;
     padding-top: 30px;
 }
 
 .blocco_testo > p{
     font-size: 8px;
+    padding-bottom: 10px;
+}
+
+.button_partner{
+    font-size: 8px;
+    background-color: white;
+    padding: 3px;
+    border: 1px solid gainsboro;
+}
+
+/* Colonne card */
+.sez_operazioni{
+    padding-bottom: 120px;
+}
+
+.operazioni > p{
+    font-size: 8px;
+}
+
+h2{
+    font-size: 18px;
+    padding-bottom: 40px;
+}
+
+.card > .img_operazioni{
+    height: 130px;
+    margin-top: 30px;
+}
+
+/* Scopri */
+.scopri > a{
+    font-size: 8px;
+}
+
+.scopri{
+    padding-bottom: 80px;
+}
+
+
+
+/* Sezione Prova */
+.prova{
+    height: 204px;
+    background-color: var(--sfondojumbo);
 }
 
 /* Colonne */
