--- a/assets/style.css
+++ b/assets/style.css
@@ -534,10 +534,19 @@ h2 {
     padding: 90px 0;
 }
 
+.top{
+border-top: 1px solid black ;
+}
+
 .faq_question{
     border-bottom: 1px solid black;
-    border-top: 1px solid black;
+    padding: 25px 0;
 }
+
+.faq_question > p{
+    font-size: 8px;
+}
+
 
 
 /* Colonne */
